# BareMetalLib

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md
cmake/: BareMetalLibConfig.cmake.in
docs/: index.md
docs/api/: index.md
docs/api/basic_types/: nullptr_ty.md
docs/api/containers/: array.md  in_place.md  in_place_index.md  optional.md  tuple.md  variant.md
docs/api/type_traits/: add_const.md  add_cv.md  add_lvalue_reference.md  add_pointer.md  add_rvalue_reference.md  add_volatile.md  aligned_storage.md  aligned_union.md  alignment_of.md  bool_constant.md  common_type.md  conditional.md  conjunction.md  decay.md  detected_or.md  detected_ty.md  disjunction.md  enable_if.md  extent.md  false_type.md  has_unique_object_representations.md  has_virtual_destructor.md  integral_constant.md  invoke_result.md  is_abstract.md  is_aggregate.md  is_arithmetic.md  is_array.md  is_assignable.md  is_base_of.md  is_class.md  is_compound.md  is_const.md  is_constructible.md  is_convertible.md  is_copy_assignable.md  is_copy_constructible.md  is_default_constructible.md  is_destructible.md  is_detected.md  (+64 more)
docs/api/utilities/: addressof.md  declval.md  forward.md  index_sequence.md  integer_sequence.md  invoke.md  launder.md  make_index_sequence.md  make_integer_sequence.md  max.md  min.md  move.md  new.md  reference_wrapper.md  swap.md  swap_ranges.md
include/bml/: basic_types.hpp  containers.hpp  type_traits.hpp  utilities.hpp
include/bml/basic_types/: nullptr_ty.hpp
include/bml/containers/: array.hpp  in_place.hpp  in_place_index.hpp  optional.hpp  tuple.hpp  variant.hpp
include/bml/detail/: INVOKE.hpp  size_to_ptrdiff.hpp
include/bml/type_traits/: add_const.hpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_rvalue_reference.hpp  add_volatile.hpp  aligned_storage.hpp  aligned_union.hpp  alignment_of.hpp  bool_constant.hpp  common_type.hpp  conditional.hpp  conjunction.hpp  decay.hpp  detected_or.hpp  detected_ty.hpp  disjunction.hpp  enable_if.hpp  extent.hpp  false_type.hpp  has_unique_object_representations.hpp  has_virtual_destructor.hpp  integral_constant.hpp  invoke_result.hpp  is_abstract.hpp  is_aggregate.hpp  is_arithmetic.hpp  is_array.hpp  is_array_of_unknown_bound.hpp  is_assignable.hpp  is_base_of.hpp  is_class.hpp  is_compound.hpp  is_const.hpp  is_convertible.hpp  (+70 more)
tests/: CMakeLists.txt
tests/docker/: Dockerfile.aarch64  Dockerfile.armv5l  Dockerfile.armv7l  Dockerfile.i386  Dockerfile.x86_64
tests/test_cases/: CMakeLists.txt  basic_types.consolidated_header.cpp  containers.consolidated_header.cpp  type_traits.consolidated_header.cpp  utilities.consolidated_header.cpp
tests/test_cases/basic_types/: CMakeLists.txt
tests/test_cases/containers/: CMakeLists.txt  array.cpp  array.fail.different_types_deduction.cpp  array.fail.free_get_invalid_index.cpp  array.fail.free_get_zero_length.cpp  array.fail.mem_get_invalid_index.cpp  array.fail.neg_length.cpp  array.fail.tuple_element_invalid_index.cpp  optional.cpp  optional.fail.array.cpp  optional.fail.in_place_ty.cpp  optional.fail.nullopt_ty.cpp  optional.fail.reference.cpp  optional.fail.void.cpp  tuple.cpp  tuple.fail.free_get_invalid_index.cpp  tuple.fail.mem_get_invalid_index.cpp  tuple.fail.tuple_element_non_tuple.cpp  tuple.fail.tuple_size_non_tuple.cpp  variant.cpp  variant.fail.array_alt.cpp  variant.fail.ctor_invalid_index.cpp  variant.fail.emplace_invalid_index.cpp  variant.fail.free_get_invalid_index.cpp  variant.fail.mem_get_invalid_index.cpp  variant.fail.no_alts.cpp  variant.fail.ref_alt.cpp  variant.fail.variant_alternative_non_variant.cpp  variant.fail.variant_size_non_variant.cpp  variant.fail.void_alt.cpp
tests/test_cases/detail/: CMakeLists.txt  INVOKE.cpp  size_to_ptrdiff.cpp  size_to_ptrdiff.fail.overflow.cpp
tests/test_cases/detail/macros/: CMakeLists.txt  compiler_specific_file.cpp  stringize.cpp
tests/test_cases/detail/macros/compiler/clang/: compiler_specific.hpp
tests/test_cases/detail/macros/compiler/gcc/: compiler_specific.hpp
tests/test_cases/type_traits/: CMakeLists.txt  add_const.cpp  add_cv.cpp  add_lvalue_reference.cpp  add_pointer.cpp  add_rvalue_reference.cpp  add_volatile.cpp  aligned_storage.cpp  aligned_storage.fail.neg_align.cpp  aligned_storage.fail.neg_len.cpp  aligned_union.cpp  aligned_union.fail.neg_len.cpp  alignment_of.cpp  bool_constant.cpp  common_type.cpp  conditional.cpp  conjunction.cpp  decay.cpp  detected_or.cpp  detected_ty.cpp  disjunction.cpp  enable_if.cpp  extent.cpp  extent.fail.neg_n.cpp  false_type.cpp  has_unique_object_representations.cpp  has_virtual_destructor.cpp  integral_constant.cpp  invoke_result.cpp  is_abstract.cpp  is_aggregate.cpp  is_arithmetic.cpp  is_array.cpp  is_array_of_unknown_bound.cpp  is_assignable.cpp  is_base_of.cpp  is_class.cpp  is_compound.cpp  is_const.cpp  is_constructible.cpp  (+76 more)
tests/test_cases/utilities/: CMakeLists.txt  addressof.cpp  addressof.fail.rvalue_address.cpp  declval.cpp  forward.cpp  forward.fail.lvalue_arg_cv_mismatch.cpp  forward.fail.missing_t.cpp  forward.fail.rvalue_arg_cv_mismatch.cpp  forward.fail.rvalue_to_lvalue.cpp  index_sequence.cpp  integer_sequence.cpp  integer_sequence.fail.non_integral.cpp  invoke.cpp  launder.cpp  launder.fail.launder_function.cpp  launder.fail.launder_void.cpp  make_index_sequence.cpp  make_integer_sequence.cpp  make_integer_sequence.fail.negative_n.cpp  max.cpp  min.cpp  move.cpp  move.fail.move_unmovable.cpp  new.cpp  reference_wrapper.cpp  swap.cpp  swap_ranges.cpp
tests/testbench/: CMakeLists.txt
tests/testbench/cmake/: ClangBuildSettings.cmake  GNUBuildSettings.cmake
tests/testbench/include/: bml_testbench.hpp
tests/testbench/src/platform/: Clang-Linux-aarch64.cpp  Clang-Linux-armv5l.cpp  Clang-Linux-armv7l.cpp  Clang-Linux-i386.cpp  Clang-Linux-x86_64.cpp  GNU-Linux-aarch64.cpp  GNU-Linux-armv5l.cpp  GNU-Linux-armv7l.cpp  GNU-Linux-i386.cpp  GNU-Linux-x86_64.cpp
tests/testbench/tests/: CMakeLists.txt  core.cpp  failure_exit_code.cpp  string_display.cpp
tests/testbench/tests/platform/: clang.freestanding.cpp  gcc.freestanding.cpp
(+65 files in other folders)
